--- a/music_player/main_app/templates/about.html
+++ b/music_player/main_app/templates/about.html
@@ -1,6 +1,12 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %}
 
-    <h1>About the Music Player</h1>
-<hr />
-<p>Use The Music Player!</p>
+{% block content %}
+
+<div class="about-container">
+  <h1>Welcome to Choruso - The Ultimate Playlist Creator App</h1>
+  <hr>
+  <p>At Choruso, we believe that music is a universal language that brings people together. That's why we've created a playlist creator app that makes it easy for music enthusiasts to curate the perfect playlist for any occasion.</p>
+  <p>Our user-friendly interface allows you to easily browse through your music library, select your favorite tracks, and organize them into a customized playlist.</p>
+  <p>Join our community of music lovers and elevate your listening experience with Choruso!</p>
+</div>
 {% endblock %}
