--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -27,7 +27,7 @@
           <ul class=right>
             <li><a href="{% url 'about'%}">About</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'playlists_create' %}">Add a Playlist</a></li>
+            <li><a href="{% url 'playlist_create' %}">Add a Playlist</a></li>
             <li><a href="{% url 'index' %}">View All Playlists</a></li>
               <li><a href="{% url 'logout' %}">Log Out</a></li>
               <li><a href="{% url 'index' %}">Hi! {{ user.username }} </a></li>
