--- a/music_player/main_app/templates/playlists/detail.html
+++ b/music_player/main_app/templates/playlists/detail.html
@@ -1,19 +1,18 @@
-
 {% extends 'base.html' %} {% block content %}
 
-<h1>Dog Details</h1>
+<h1>Playlist Details</h1>
 
 <div class="row">
   <div class="col s6">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">{{ playlists.name }}</span>
-        <p>Image: {{ playlists.image }}</p>
-        <p>Description: {{ playlists.description }}</p>
+        <span class="card-title">{{ playlist.name }}</span>
+        <p>Image: {{ playlist.image }}</p>
+        <p>Description: {{ playlist.description }}</p>
       </div>
       <div class="card-action">
-        <a href="{% url 'playlists_update' playlists.id %}">Edit</a>
-        <a href="{% url 'playlists_delete' playlists.id %}">Delete</a>
+        <a href="{% url 'playlist_update' playlist.id %}">Edit</a>
+        <a href="{% url 'playlist_delete' playlist.id %}">Delete</a>
       </div>
     </div>
   </div>
