--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <header class=navbar-fixed>
