--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -7,7 +7,9 @@
     <meta name=viewport content=width=device-width, initial-scale=1.0 />
     <meta http-equiv=X-UA-Compatible content=ie=edge />
     <title>Music Player</title>
-   
+    <link rel="shortcut icon" type="image/ico" href="{% static 'css/images/android-chrome-512x512.png' %}" />
+
+    {% comment %} <link rel="manifest" href="{% static 'site.webmanifest' %}"> {% endcomment %}
     <link
       rel=stylesheet
       href=https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css
