assoc/remove song fn working

--- a/music_player/main_app/templates/playlists/detail.html
+++ b/music_player/main_app/templates/playlists/detail.html
@@ -18,27 +18,39 @@
   </div>
 </div>
 </div>
-<div>
+
+ <div>
   <form action="" method="POST" autocomplete="off">
     <a href="{% url 'songs_create' %}" class="btn btn-primary btn-lg">Add Songs</a>
   </form>
-</div>
+</div> 
+
+
+<hr>
+
 <div class="row">
   <div class="col s6">
     <h3>{{ playlist.name }}'s Songs</h3>
-    {% if song.playlist.count %} {% for song in playlist.songs.all %}
+    {% if playlist.songs.count %} {% for song in playlist.songs.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-           {{ song.name }}
+          {{ song.title }}
         </span>
+      </div>
+
+      <div class="card-action">
+        <form action="{% url 'remove_song' playlist.id song.id %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn">Remove</button>
+        </form>
       </div>
     </div>
     {% endfor %} {% else %}
-    <h5>No Songs :(</h5>
+    <h5>No Songs :( </h5>
     {% endif %}
   </div>
-<div class="row">
+
   <div class="col s6">
     <h3>Available Songs</h3>
     {% if songs.count %}
@@ -46,7 +58,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">
-              {{ song.title }}
+              {{ song.title }} by {{song.artist}}
             </span>
           </div>
           <div class="card-action">
@@ -55,9 +67,11 @@
               <button type="submit" class="btn">Add</button>
             </form>
           </div>
+        </div>
       {% endfor %}
     {% else %}
       <h5>{{playlist.name}} Already Has All Songs Available</h5>
     {% endif %}
-  </div>
-{% endblock %}
+  </div> 
+
+  {% endblock %} 
