--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -15,8 +15,8 @@
       href=https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css
     />
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
     <header class=navbar-fixed>
@@ -24,19 +24,18 @@
         <div class=nav-wrapper>
           <ul>
             <li>
-              <a href=/ class=left brand-logo>  Music Player</a>
+              <a href="/" class="left brand-logo">  <img src="{% static 'css/images/android-chrome-512x512.png' %}" class="logo"></a>  
             </li>
           </ul>
           <ul class=right>
-            <li><a href="{% url 'about'%}">About</a></li>
             {% if user.is_authenticated %}
-            <li><a href="{% url 'playlist_create' %}">Add a Playlist</a></li>
-            <li><a href="{% url 'index' %}">View All Playlists</a></li>
-              <li><a href="{% url 'logout' %}">Log Out</a></li>
-              <li><a href="{% url 'index' %}">Hi! {{ user.username }} </a></li>
+            <li><a href="{% url 'playlist_create' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/add-1486-551406.png?f=avif&w=256'class='rightlogo' title="Create Playlist"></a></li>
+            <li><a href="{% url 'index' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/playlist-39-551618.png?f=avif&w=256'class="rightlogo"title="View All Playlists"></a></li>
+            <li><a href="{% url 'logout' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/enter-26-551609.png?f=avif&w=256'class='rightlogo'title="Logout!"></a></li>
+            <li><a href="{% url 'index' %}">Hi! {{ user.username }} </a></li>
               {% else %}
-              <li><a href="{% url 'signup' %}">Sign Up</a></li>
-              <li><a href="{% url 'login' %}">Log In</a></li> 
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li> 
               {% endif %}
           </ul>
         </div>
