--- a/music_player/main_app/templates/main_app/playlist_form.html
+++ b/music_player/main_app/templates/main_app/playlist_form.html
@@ -10,6 +10,6 @@
   <table>
     {{ form.as_table }}
   </table>
-  <input type="submit" value="Submit!" class="btn" />
+  <input type="submit" value="Submit!" class="btn" id="submitbutton"/>
 </form>
 {% endblock %}
