--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -32,10 +32,10 @@
             <li><a href="{% url 'playlist_create' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/add-1486-551406.png?f=avif&w=256'class='rightlogo' title="Create Playlist"></a></li>
             <li><a href="{% url 'index' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/playlist-39-551618.png?f=avif&w=256'class="rightlogo"title="View All Playlists"></a></li>
             <li><a href="{% url 'logout' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/enter-26-551609.png?f=avif&w=256'class='rightlogo'title="Logout!"></a></li>
-            <li><a href="{% url 'index' %}">Hi! {{ user.username }} </a></li>
+            <li><a href="{% url 'index' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/gamer-7895089-6445029.png?f=avif&w=256'class='rightlogo'title='Hi! {{ user.username }}'> </a></li>
               {% else %}
-            <li><a href="{% url 'signup' %}">Sign Up</a></li>
-            <li><a href="{% url 'login' %}">Log In</a></li> 
+            <li><a href="{% url 'signup' %}"><img src='https://cdn.iconscout.com/icon/premium/png-512-thumb/page-322-480523.png?f=avif&w=256'class='rightlogo'title='Sign UP'></a></li>
+            <li><a href="{% url 'login' %}"><img src="https://cdn.iconscout.com/icon/free/png-512/free-login-95-517794.png?f=avif&w=256"class='rightlogo'title='Log In'></a></li> 
               {% endif %}
           </ul>
         </div>
