--- a/music_player/main_app/templates/playlists/detail.html
+++ b/music_player/main_app/templates/playlists/detail.html
@@ -19,14 +19,12 @@
   </div>
 </div>
 </div>
-
- <div>
+<div class="button-group">
+  <a href="/songs" class="btn btn-success">View Songs</a>
   <form action="" method="POST" autocomplete="off">
     <a href="{% url 'songs_create' %}" class="btn btn-primary btn-lg">Add Songs</a>
   </form>
-</div> 
-
-
+</div>
 <hr>
 
 <div class="row">
@@ -36,14 +34,14 @@
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-          {{ song.title }} by <div id="song-artist"> {{song.artist}}</div>
+          {{ song.title }} by <span id="song-artist"> {{song.artist}}</span>
         </span>
       </div>
 
       <div class="card-action">
         <form action="{% url 'remove_song' playlist.id song.id %}" method="post">
           {% csrf_token %}
-          <button type="submit" class="btn">Remove</button>
+          <a href="{% url 'remove_song' playlist.id song.id %}" type="submit" id="removebtn"><img src="{% static 'css/images/icons8-minus-100 (1).png' %}"alt="submit"></a>
         </form>
       </div>
     </div>
@@ -65,7 +63,7 @@
           <div class="card-action">
             <form action="{% url 'assoc_song' playlist.id song.id %}" method="post">
               {% csrf_token %}
-              <button type="submit" class="btn">Add</button>
+              <a href="{% url 'assoc_song' playlist.id song.id %}"type="submit" id="removebtn"><img src="{% static 'css/images/icons8-add-new-100.png' %}"alt="submit"> </a>
             </form>
           </div>
         </div>
