--- a/music_player/main_app/templates/main_app/song_form.html
+++ b/music_player/main_app/templates/main_app/song_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content%}
-<form action='' method='POST' autocomplete="off">
+<form action='' method='POST' autocomplete="off" enctype='multipart/form-data'>
 
     {% csrf_token %}
     <!-- {% if object %}
