--- a/music_player/main_app/static/css/style.css
+++ b/music_player/main_app/static/css/style.css
@@ -6,6 +6,12 @@ body {
     font-style: italic;
     font-size: smaller;
 }
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+}
 h1 {
     padding: 20px;
     text-align: center;
