--- a/music_player/main_app/static/css/style.css
+++ b/music_player/main_app/static/css/style.css
@@ -66,6 +66,11 @@ h1 {
 .card-content {
     background-color: #617C8C;
 }
+#openplaylistbtn {
+    display: flex;
+    justify-content: flex-end;
+    /* float: right; */
+}
 
 
 /* <--- media player ---> */
