--- a/music_player/main_app/templates/playlists/detail.html
+++ b/music_player/main_app/templates/playlists/detail.html
@@ -20,6 +20,7 @@
       <div class="card-content">
         <span class="card-title">{{ playlist.name }}</span>
         <p>Description: {{ playlist.description }}</p>
+        <a href="{% url 'playlist' playlist.id %}"type="submit"id="openplaylistbtn"class="btn btn-success">Start Playlist</a>
       </div>
       <div class="card-action">
         <a href="{% url 'playlist_update' playlist.id %}"type="submit" id="removebtn"><img src="{% static 'css/images/icons8-edit-100.png' %}"alt="Edit"></a>
@@ -32,7 +33,7 @@
 <div class="button-group">
   <a href="/songs" class="btn btn-success">View Songs</a>
   <form action="" method="POST" autocomplete="off">
-    <a href="{% url 'songs_create' %}" class="btn btn-primary btn-lg">Add Songs</a>
+    <a href="{% url 'songs_create' %}" class="btn btn-primary ">Add Songs</a>
   </form>
 </div>
 
