--- a/music_player/main_app/templates/playlists/indvplaylist.html
+++ b/music_player/main_app/templates/playlists/indvplaylist.html
@@ -25,10 +25,10 @@
         <img alt="" src="{{item.image.url}}"/>
        </div>
        <div class="titre">
-        <h3>
+        <h3 id="song-artist">
          {{item.artist}}
         </h3>
-        <h1>
+        <h1 id='song-title'>
          {{item.title}}
         </h1>
        </div>
