--- a/music_player/main_app/static/css/style.css
+++ b/music_player/main_app/static/css/style.css
@@ -1,81 +1,3 @@
-body {
-    background-color: #F2F2F2 !important;
-}
-#song-artist {
-    color: #B6E1F2;
-    font-style: italic;
-    font-size: smaller;
-}
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    left: 0;
-    padding: 0;
-    margin: 0;
-}
-h1 {
-    padding: 20px;
-    text-align: center;
-    color: #262626 !important;
-}
-
-.nav-wrapper {
-     background-color: #617C8C;
-}
-.page-footer, span.right{
-    background-color: #617C8C;
-    text-align: right;
-    padding: 2px 0 0;
-}
-.about-container {
-    background-color: #F2F2F2;
-    padding-bottom: 700px;
-}
-#submitbutton {
-    background-color: #617C8C;
-    color: #F2F2F2;
-}
-.logo {
-    height: 55px;
-    width: 55px;
-    
-}
-.rightlogo {
-    height: 30px;
-    width: 30px;
-}
-.btn-success {
-    float: left;
-}
-.btn-primary {
-    float: right;
-}
-.button-group {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-}
-#removebtn {
-    padding: 0;
-    border: none;
-    background: none;
-}
-#removebtn img {
-    width: 30px;
-    height: 30px;
-    border: none;
-}
-.card-content {
-    background-color: #617C8C;
-}
-#openplaylistbtn {
-    display: flex;
-    justify-content: flex-end;
-    /* float: right; */
-}
-
-
 /* <--- media player ---> */
 
 *:focus{
@@ -86,15 +8,16 @@ html {
 }
 body {
     margin: 0;
-    font-family: "Raleway",sans-serif;
+    /* font-family: "Raleway",sans-serif; */
+    font-family: 'Sora', sans-serif;
 }
-h1 {
+h1#song-title {
     margin: 0;
     font-size: 33px;
     color: #fff;
     padding: 0 10%;
 }
-h3 {
+h3#song-artist {
     margin: 0;
     font-size: 17px;
     font-weight: 500;
@@ -322,3 +245,98 @@ h3 {
     padding-left: 20px;
     color:rgb(97,125,141);
 }
+
+
+/* base css */
+
+
+body {
+    background-color: #F2F2F2 !important;
+    
+}
+p {
+    font-family: 'Sora', sans-serif;
+}
+
+#song-artist {
+    color: #B6E1F2;
+    font-style: italic;
+    font-size: smaller;
+}
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    padding: 0;
+    margin: 0;
+}
+h1 {
+    padding: 20px;
+    text-align: center;
+    color: #262626 !important;
+    font-family: 'Bruno Ace SC', cursive;
+}
+
+h3 {
+    font-family: 'Bruno Ace SC', cursive; 
+}
+
+.nav-wrapper {
+     background-color: #617C8C;
+}
+.page-footer, span.right{
+    background-color: #617C8C;
+    text-align: right;
+    padding: 2px 0 0;
+}
+.about-container {
+    background-color: #F2F2F2;
+    padding-bottom: 700px;
+}
+#submitbutton {
+    background-color: #617C8C;
+    color: #F2F2F2;
+}
+.logo {
+    height: 55px;
+    width: 55px;
+    
+}
+.rightlogo {
+    height: 30px;
+    width: 30px;
+}
+.btn-success {
+    float: left;
+}
+.btn-primary {
+    float: right;
+}
+.button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+#removebtn {
+    padding: 0;
+    border: none;
+    background: none;
+}
+#removebtn img {
+    width: 30px;
+    height: 30px;
+    border: none;
+}
+.card-content {
+    background-color: #617C8C;
+}
+#openplaylistbtn {
+    display: flex;
+    justify-content: flex-end;
+    float: right;
+}
+
+
+
+
