--- a/music_player/main_app/templates/playlists/playlist.html
+++ b/music_player/main_app/templates/playlists/playlist.html
@@ -18,7 +18,7 @@
    </head>
    <body>
     <div class="contain">
-     <div class="container">
+     <div class="containermp">
       <div class="music-player">
         {% for item in page_obj %}
        <div class="cover">
