--- a/music_player/main_app/templates/about.html
+++ b/music_player/main_app/templates/about.html
@@ -14,4 +14,5 @@
   <p>Our user-friendly interface allows you to easily browse through your music library, select your favorite tracks, and organize them into a customized playlist.</p>
   <p>Join our community of music lovers and elevate your listening experience with Choruso!</p>
 </div>
+<lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_8hgvcqak.json" style="width: 400px; height: 400px" background="transparent"  speed="1" loop autoplay></lottie-player>
 {% endblock %}
