--- a/music_player/main_app/templates/about.html
+++ b/music_player/main_app/templates/about.html
@@ -13,6 +13,7 @@
   <p>At Choruso, we believe that music is a universal language that brings people together. That's why we've created a playlist creator app that makes it easy for music enthusiasts to curate the perfect playlist for any occasion.</p>
   <p>Our user-friendly interface allows you to easily browse through your music library, select your favorite tracks, and organize them into a customized playlist.</p>
   <p>Join our community of music lovers and elevate your listening experience with Choruso!</p>
+  <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_e73nHv743E.json" background="transparent"  speed="1" loop autoplay></lottie-player>
 </div>
-<lottie-player src="https://assets8.lottiefiles.com/private_files/lf30_8hgvcqak.json" style="width: 400px; height: 400px" background="transparent"  speed="1" loop autoplay></lottie-player>
+
 {% endblock %}
