--- a/music_player/main_app/templates/base.html
+++ b/music_player/main_app/templates/base.html
@@ -10,16 +10,16 @@
     <meta http-equiv=X-UA-Compatible content=ie=edge />
     <title>Choruso</title>
     <link rel="shortcut icon" type="image/ico" href="{% static 'css/images/android-chrome-512x512.png' %}" />
-    <link
+     <link
       rel=stylesheet
       href=https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css
-    />
+    /> 
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
     <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class=navbar-fixed>
@@ -44,7 +44,7 @@
         </div>
       </nav>
     </header>
-    <main class=container>{% block content %} {% endblock %}</main>
+    <main class=container>{% block content %} {% endblock %} </main>
     <footer class="page-footer">
      All Rights Reserved, © 2023 Choruso
     </footer>
