--- a/music_player/main_app/templates/playlists/detail.html
+++ b/music_player/main_app/templates/playlists/detail.html
@@ -16,22 +16,23 @@
 
 <div class="row">
   <div class="col s6">
-    <div class="card">
+    <div class="card playlist-card">
       <div class="card-content">
         <table>
           <tr>
             <td>
-              <span class="card-title">{{ playlist.name }}</span>
-              <p>{{ playlist.description }} •	 {{user.username}}</p>
+              <span id="card-title" class="card-title">{{ playlist.name }}</span>
+              <p>{{ playlist.description }} • {{user.username}}</p>
             </td>
-            <td><a href="{% url 'playlist' playlist.id %}"type="submit"id="openplaylistbtn"class="btn btn-success">Start Playlist</a></td>
-            
-              <div class="button-group">
-                <td> <a href="/songs" class="btn btn-success">View Songs</a></td>
+            <td>
+              <div class="button-group" style="display:flex; align-items:center;">
+                <a href="{% url 'playlist' playlist.id %}" type="submit" id="openplaylistbtn" class="btn btn-flat"><img src="https://cdn.iconscout.com/icon/premium/png-512-thumb/play-359-551616.png?f=avif&w=256" style="width:32px; height:32px;" alt="Start Playlist" title="Start Player"/></a>
+                <a href="/songs" class="btn btn-flat"><img src="https://cdn.iconscout.com/icon/premium/png-512-thumb/server-487-551630.png?f=avif&w=256" style="width:32px; height:32px;" alt="View Songs" title="View Songs"/></a>
                 <form action="" method="POST" autocomplete="off">
-                <td><a href="{% url 'songs_create' %}" class="btn btn-primary ">Add Songs</a></td>
+                <a href="{% url 'songs_create' %}" class="btn btn-flat"><img src="https://cdn.iconscout.com/icon/premium/png-512-thumb/small-screen-1-551631.png?f=avif&w=256" style="width:32px; height:32px;" alt="Add Songs" title="Add Songs"></a>
                 </form>
               </div>
+            </td>
           </tr>
         </table>
       </div>
@@ -53,7 +54,7 @@
 
 <div class="row">
   <div class="col s6"id="songchanges">
-    <h3>{{ playlist.name }}'s Songs</h3>
+    <h3>{{ user.username }}'s Songs</h3>
     {% if playlist.songs.count %} {% for song in playlist.songs.all %}
     <div class="card">
       <div class="card-content">
