adds styling to songlist & songdetail

--- a/music_player/main_app/static/css/style.css
+++ b/music_player/main_app/static/css/style.css
@@ -484,3 +484,10 @@ td #card-title {
     margin-right: 10px;
   }
   
+  .no-underline {
+    text-decoration: none;
+    color:#262626;
+  }
+  .no-underline:hover {
+    color:#999;
+  }
