--- a/music_player/main_app/templates/main_app/song_detail.html
+++ b/music_player/main_app/templates/main_app/song_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %} {% block content %}
+{%load static%}
 
 <h1>Song Details</h1>
 
@@ -6,7 +7,9 @@
     <a href="{% url 'songs_detail' song.id %}">
         <div class="card-content">
             <span class="card-title">
-            {{ song.title }}</span>
+                <p>{{ song.title }}</p>
+                <p id="song-artist"> {{song.artist}}</p>
+            </span>
         </div>
     </a>
     <div class="card-action">
