--- a/music_player/main_app/templates/main_app/song_list.html
+++ b/music_player/main_app/templates/main_app/song_list.html
@@ -4,9 +4,12 @@
 
 {% for song in object_list %}
 <div class="card">
-  <a href="{% url 'songs_detail' song.id %}" >
+  <a href="{% url 'songs_detail' song.id %}" class="no-underline" >
   <div class="card-content">
-    <span class="card-title"> {{ song.title }}</span>
+    <span class="card-title">
+      <p>{{ song.title }}</p>
+      <p id="song-artist"> {{song.artist}}</p>
+  </span>
   </div>
   </a>
 </div>
