adds delete-playlist btn to index.html

--- a/music_player/main_app/static/css/style.css
+++ b/music_player/main_app/static/css/style.css
@@ -467,7 +467,7 @@ td #card-title {
     padding: 0;
   }
 
-  .button-group a:hover img {
+  .button-group a:hover img, .delete-playlist:hover {
     animation: shake 0.5s;
   }
   
