--- a/music_player/main_app/templates/playlists/index.html
+++ b/music_player/main_app/templates/playlists/index.html
@@ -11,10 +11,15 @@
     <div class="card-content">
         <span class="card-title">{{ playlist.name }}</span>
         {{playlist.description}}   
-            
+        
         <div id="start">   
-        <a href="{% url 'playlist' playlist.id %}"type="submit"><img src="https://cdn.iconscout.com/icon/premium/png-512-thumb/play-359-551616.png?f=avif&w=256" style="width:50px; height:50px; float:right;"></a> 
-        </div>    
+            <a href="{% url 'playlist' playlist.id %}"type="submit"><img src="https://cdn.iconscout.com/icon/premium/png-512-thumb/play-359-551616.png?f=avif&w=256" style="width:50px; height:50px; float:right;"></a> 
+        </div>   
+        
+        <div class="delete-playlist">
+            <a href="{% url 'playlist_delete' playlist.id %}"type="submit" id="removebtn"><img src= "https://cdn.iconscout.com/icon/premium/png-512-thumb/delete-758-551869.png?f=avif&w=256" alt="Delete"></a>   
+        </div>
+        
      
     </div>
 </a>
