fixed cancel button for song_confirm_del.html

--- a/main_app/templates/main_app/song_confirm_delete.html
+++ b/main_app/templates/main_app/song_confirm_delete.html
@@ -9,7 +9,7 @@
 <form action="" method="POST">
   {% csrf_token %}
   <input type="submit" value="Yes - Delete!" class="btn" />
-  <a href="{% url 'detail' song.id %}">Cancel</a>
+  <a href="{% url 'songs_detail' object.id %}">Cancel</a>
 </form>
 {% endblock %}
 
